adding more early technical works

--- a/index.html
+++ b/index.html
@@ -488,6 +488,42 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-question-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
 	</tr>
+
+	<tr>
+		<td class="col_year">   2009</td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/10.1145/1456455.1456460">Mobile Trusted Modules</a></td>
+		<td class="col_venue">  CCSW/STC</td>
+		<td class="col_domain"> <span class="badge text-bg-warning">TrustZone</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Presents essential techniques for using the TrustZone to run a secure and non-secure Linux instance, interrupt sharing, secure boot. Concept of a TrustZone-Assisted hypervisor is presented where the secure world and Monitor/EL3 mode is used as a hypervisor for the normal world.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-question-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-question-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
+	</tr>
+
+	<tr>
+		<td class="col_year">   2009</td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/10.1145/1357010.1352625">Flicker</a></td>
+		<td class="col_venue">  EuroSys</td>
+		<td class="col_domain"> <span class="badge text-bg-success">Virt</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Segment</span></td>
+		<td class="col_ideas">  Uses AMD SEV or Intel TXT to execute a piece of app logic instead of a VM. Sets up a small execution environment for the application.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
+	</tr>
+
+
 <!--
 	<tr>
 		<td class="col_year">   </td>
@@ -501,7 +537,7 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_A">      </td>
 		<td class="col_RA">     </td>
 		<td class="col_P">      </td>
-		<td class="col_MA">    </td>
+		<td class="col_MA">     </td>
 		<td class="col_IO">     </td>
 		<td class="col_legacy"> </td>
 	</tr>
