under construction message

--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@ Historically, the open source software community rightfully was extremely wary o
 
 </tbody>
 </table>
+This table is a work in progress. Recent entries to be added soon.
 </div>
 
 
